# sa-auth

./: .gitignore  .releaserc.yml  Cargo.toml  Cross.toml  Dockerfile  customize-lambci.sh  docker-build-softprops.sh  docker-lambda-build.sh  docker-lambda-interactive.sh  docker-lambda.sh  invoke-local.sh  setup-rust-image.sh  test-alb-payload.json
.github/workflows/: audit-push.yml  audit-scheduled.yml  build.yml  ci-push.yml  coverage-push.yml  release.yml
auth-model/: Cargo.toml
papo-provider-core/: Cargo.toml
papo-provider-core/src/: lib.rs
papo-provider-google/: Cargo.toml
papo-provider-google/src/: lib.rs
papo-provider-patreon/: Cargo.toml
papo-provider-patreon/src/: lib.rs
sa-auth-lambda/: Cargo.toml
sa-auth-lambda/src/: config.rs  context.rs  error.rs  main.rs  routes.rs
sa-auth-lambda/src/routes/: authorize_patreon.rs  callback.rs  login.rs  logout.rs  me.rs  not_found.rs  patreon_callback.rs
sa-auth-model/: Cargo.toml
sa-auth-model/src/: lib.rs
src/: main.rs
