[package]
name = "sa-auth-model"
version = "0.1.0"
authors = ["Scott Donnelly"]
edition = "2018"
description = "Solvastro Auth Model"
keywords = ["AWS", "Lambda", "Auth", "OAuth"]

[dependencies]
async-trait = "0.1.51"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-config" }
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-types" }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-sdk-dynamodb" }
chrono = "0.4"
cookie = "0.15"
log = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = "1"
unique_id = "0.1"
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.5"

[lib]
name = "sa_auth_model"
path = "src/lib.rs"