[package]
name = "papo-provider-patreon"
version = "0.1.0"
authors = ["Scott Donnelly"]
edition = "2018"
description = "Patreon provider for Papo"
keywords = ["AWS", "Lambda", "Auth", "OAuth"]

[dependencies]
papo-provider-core = { path = "../papo-provider-core" }
async-trait = "0.1.51"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
unique_id = "0.1"
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["macros"] }

[lib]
name = "papo_provider_patreon"
path = "src/lib.rs"