[package]
name = "sa-auth"
version = "0.1.0"
authors = ["Scott Donnelly <scott@donnel.ly>"]
edition = "2021"
description = "Authentication lambda for web apps"
keywords = ["AWS", "Lambda", "Auth", "OAuth"]
autobins = false

[dependencies]
async-trait = "0.1.51"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-config" }
aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-types" }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-sdk-dynamodb" }
chrono = "0.4"
cookie = "0.15"
jsonwebtoken = "7"
lambda_http = "0.4"
lambda_runtime = "0.4"
log = "0.4"
papo-provider-core = { path = "../papo-provider-core" }
papo-provider-google = { path = "../papo-provider-google" }
sa-auth-model = { path = "../sa-auth-model" }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = "1"
unique_id = "0.1"
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[[bin]]
name = "bootstrap"
path = "src/main.rs"