[package]
name = "sa-auth"
version = "0.1.0"
authors = ["Scott Donnelly <scott@donnel.ly>"]
edition = "2018"
description = "Authentication lambda for web apps"
keywords = ["AWS", "Lambda", "Auth", "OAuth"]
autobins = false

[dependencies]
anyhow = "1"
async-trait = "0.1.51"
atty = "0.2"
aws-config = "^0.12"
aws_lambda_events = { git = "https://github.com/LegNeato/aws-lambda-events", branch="master"}
aws-types = "^0.12"
aws-sdk-dynamodb = "^0.12"
cmake = "=0.1.45"
chrono = "0.4"
cookie = "0.15"
envconfig = "0.10"
jsonwebtoken = "7"
lambda_http = "^0.5.1"
lambda_runtime = "^0.5.1"
papo-provider-core = { path = "../papo-provider-core" }
papo-provider-google = { path = "../papo-provider-google" }
papo-provider-patreon = { path = "../papo-provider-patreon" }
sa-auth-model = { path = "../sa-auth-model" }
sa-model = { git = "https://github.com/sdd/sa-model", branch="master" }
reqwest = { version = "0.11", features = ["native-tls-vendored", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.3.3", features = ["cors"] }
tracing = "^0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unique_id = "0.1"
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[[bin]]
name = "bootstrap"
path = "src/main.rs"
