[package]
name = "sa-auth-model"
version = "0.1.0"
authors = ["Scott Donnelly"]
edition = "2018"
description = "Solvastro Auth Model"
keywords = ["AWS", "Lambda", "Auth", "OAuth"]

[dependencies]
async-trait = "0.1.51"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-config" }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-sdk-dynamodb" }
chrono = "0.4"
cookie = "0.15"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
papo-provider-patreon = { path = "../papo-provider-patreon" }
thiserror = "1.0"
tokio = "1"

[dev-dependencies]
wiremock = "0.5"

[lib]
name = "sa_auth_model"
path = "src/lib.rs"