[package]
name = "sa-auth-model"
version = "0.1.0"
authors = ["Scott Donnelly"]
edition = "2018"
description = "Solvastro Auth Model"
keywords = ["AWS", "Lambda", "Auth", "OAuth"]

[dependencies]
async-trait = "0.1.51"
aws-config = "^0.12"
aws-sdk-dynamodb = "^0.12"
chrono = "0.4"
cookie = "0.15"
dynomite = { git = "https://github.com/sdd/dynomite", branch="aws-sdk-dynamodb-support" }
log = "0.4"
sa-model = { git = "https://github.com/sdd/sa-model", branch="master" }
serde = { version = "1.0", features = ["derive"] }
papo-provider-patreon = { path = "../papo-provider-patreon" }
thiserror = "1.0"
tokio = "1"

[dev-dependencies]
wiremock = "0.5"

[lib]
name = "sa_auth_model"
path = "src/lib.rs"
